Move root container to top

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  position: fixed;
+  top: 130px; /* Adjust this value to the desired top margin */
+  width: 100%;
 }
 
 .logo {
